// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`callback should return the correct output 1`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": "**The definition of insanity is answering the same question over and over again when we have an [#faq](https://discord.com/channels/505093832157691914/823266307293839401/823266549912829992)!  Help us stay sane by giving it a read.**",
      "fields": Array [],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Frequently Asked Questions",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`callback should return the correct output 2`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": "**The definition of insanity is answering the same question over and over again when we have an [#faq](https://discord.com/channels/505093832157691914/823266307293839401/823266549912829992)! <@1>, help us stay sane by giving it a read.**",
      "fields": Array [],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Frequently Asked Questions",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`callback should return the correct output 3`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": "**The definition of insanity is answering the same question over and over again when we have an [#faq](https://discord.com/channels/505093832157691914/823266307293839401/823266549912829992)! <@1> and <@2>, help us stay sane by giving it a read.**",
      "fields": Array [],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Frequently Asked Questions",
      "type": "rich",
      "url": null,
    },
  ],
}
`;

exports[`callback should return the correct output 4`] = `
Object {
  "embeds": Array [
    Object {
      "author": null,
      "color": 13407555,
      "description": "**The definition of insanity is answering the same question over and over again when we have an [#faq](https://discord.com/channels/505093832157691914/823266307293839401/823266549912829992)! <@1>, <@2>, and <@3>, help us stay sane by giving it a read.**",
      "fields": Array [],
      "footer": null,
      "image": null,
      "thumbnail": null,
      "timestamp": null,
      "title": "Frequently Asked Questions",
      "type": "rich",
      "url": null,
    },
  ],
}
`;
